<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FashionHub</string>
    <string name="signInHeader">Sign in</string>
    <string name="signInHeader2">Fill your Username and Password to Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="i_dont_have_an_account">Dont have an account?</string>
    <string name="enter_your_email_to_send_the_reset_link">Enter Your Email to Send the Reset Link</string>
    <string name="email">Email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password_to_reset">Enter Your New Password to Reset</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign up</string>
    <string name="fill_your_details_to_sign_up">Fill Your Details to Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign in</string>//
    <string name="fashionHub">Fashion Hub</string>
    <string name="the_largest_online_fashion_store">The Largest Online Fashion Store</string>
    <string name="made_in_sri_lanka">Made in Sri Lanka</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="welcome" tools:ignore="TypographyEllipsis">Welcome...</string>
    <string name="logout">Logout</string>
    <string name="footer_home">Home</string>
    <string name="footer_account">Account</string>
    <string name="footer_offer">Offers</string>
    <string name="footer_more">More</string>
    <string name="footer_menu">Menu</string>
    <string name="floating_icon">Floating Icon</string>
    <string name="fashion_hub">Fashion Hub</string>
    <string name="fashionHub_description">“Fashion Hub”, online fashion store is an  android application which provide an  extensive fashion designs flat form that helps to shop owners and customers to deliver their choose  fashion by online.</string>
    <string name="Login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="about_us">About Us</string>
    <string name="who_are_we">Who are we</string>
    <string name="about_us_description">Dr.Dev is a Second-year second Semester project group. We do this by Applications for a Mobile application development project. We started by facilitating door-to-door delivery,but wo see this as just the beginning of connecting people with possibilities casier eveninos happier days, bigger savings accounts. Wider pets and stronger communities.</string>
    <string name="payment_details">Payment Details</string>
    <string name="customize_payment_method">Customize YOur Payment Method</string>
    <string name="add_another_credit_debit">Add another Credit / Debit Card</string>
    <string name="card_no">Card Number</string>
    <string name="card_name">Card Name</string>
    <string name="expiry_date">Card Name</string>
    <string name="mm">MM</string>
    <string name="Mm">MM</string>
    <string name="yy">YY</string>
    <string name="CVV">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="black_formal_trouser">VANTAGE BLACK FORMAL TROUSER</string>
    <string name="description">Description</string>
    <string name="gents_ultra_slim">Gents ultra slim plaid pattern formal dress</string>
    <string name="LKR11000">Rs. 11000</string>
    <string name="size">Size</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="large">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="no_of_items">No of Items</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="jobbs_neck">Jobbs Neck T-Shirt</string>
    <string name="des_jobbs_neck">Made with soft and breathable single jersey</string>
    <string name="sub_total">Sub Total</string>
    <string name="del_cost">Delivery Cost</string>
    <string name="total">Total</string>
    <string name="done">Done</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_pay_method">Add Payment Method</string>
    <string name="cash_on_del">Cash on Delivery</string>
    <string name="discount">Discount</string>
    <string name="card_payment">Card Payment</string>
    <string name="other_methodst">Other Methods</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="per_address">Permanent Address</string>
    <string name="del_address">Delivery Address</string>
    <string name="change_address">Change Address</string>
    <string name="thank_u">Thank You For Your Order</string>
    <string name="thank_u_being">Thank You For Being With Us</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="popular_brands">Popular Brands</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="testData">TestData</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="desc">Fashion Hub, online fashion store is an android application which provides an extensive fashion designs platform that helps to shop owners and customers to deliver their chosen fashion by online</string>
    <string name="my_cart">My Cart</string>
    <string name="notifications">Notifications</string>
    <string name="more_options_for_user">More Options for User</string>
    <string name="small_description_about_fashionHub_dr_dev">Small description about fashionhub (Dr. Dev)</string>
    <string name="back">Back</string>
    <string name="who_we_are">Who We Are</string>
    <string name="aboutUsDesc">Dr. Dev is a second-year second semester group project. We do this application for Mobile Application Development Project. We started facilitating door-todoor delivery, but we see this as just the beginning of connectiong people with possibilities. (This is only a Prop)</string>
    <string name="made">Made in Sri Lanka 🇱🇰</string>
    <string name="next">Next</string>
    <string name="stay_safe_stay_happy">Stay Safe ! Stay Happy !</string>
    <string name="mensFashion">mensFashion</string>
    <string name="mens_fashion">Mens Fashion</string>
    <string name="women_fashion">Women Fashion</string>
    <string name="baby_fashion">Baby Fashion</string>
    <string name="accessories">Accessories</string>
    <string name="my_account">My Account</string>
    <string name="your_account_details_are_here">Your Account Details are Here</string>
    <string name="update_details">Update Details</string>
    <string name="to_home">To Home</string>
    <string name="delete_my_account">Delete Account</string>
    <string name="update">Update</string>
</resources>
