<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#353535">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInHeader"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="30sp"
                android:fontFamily="@font/poppins_family"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInHeader2"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="13sp"
                android:fontFamily="@font/poppins_family"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ddd"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:boxStrokeColor="#ffffff"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                app:startIconDrawable="@drawable/ic_round_person_24"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColor="@color/white"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/poppins_family"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:boxStrokeColor="#ffffff"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                app:startIconDrawable="@drawable/ic_round_lock_24"
                app:startIconTint="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_family"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:fontFamily="@font/poppins_family"
                android:textColor="@color/white"
                android:layout_marginEnd="30dp"
                android:layout_gravity="end"/>

            <Button
                android:id="@+id/signinButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/poppins_family"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="@drawable/round_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_in_with"
                android:fontFamily="@font/poppins_family"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/google_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/google_button"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/sign_in_with_google" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_dont_have_an_account"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/poppins_family"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>