<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_family"
            android:text="@string/my_account"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:fontFamily="@font/poppins_family"-->
<!--            android:text="@string/your_account_details_are_here"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="#ddd"-->
<!--            android:textSize="13sp"-->
<!--            android:textStyle="bold" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/orText"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_family"
                android:text="@string/your_account_details_are_here"
                android:textColor="#ddd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/orText"
                android:background="@color/divider" />

        </RelativeLayout>

    <TextView
        android:id="@+id/firstName1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/first_name"
        android:fontFamily="@font/poppins_family"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/divider"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/lastName1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/last_name"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_family"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/divider"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_family"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/divider"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/telephone1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/telephone"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_family"
            android:textColorHint="@color/divider"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/address"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_family"
            android:textColorHint="@color/divider"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_family"
            android:textColorHint="@color/divider"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <Button
            android:id="@+id/updateDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_button"
            android:layout_marginTop="30dp"
            android:text="@string/update_details"
            android:fontFamily="@font/poppins_family"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textColor="@color/white"
            android:background="@drawable/fully_round_button"
            android:text="@string/to_home"
            android:drawableLeft="@drawable/ic_round_home_24"
            android:contentDescription="@string/floating_icon"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck,RelativeOverlap" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:text="@string/delete_my_account"
                android:drawableRight="@drawable/ic_round_delete_24"
                android:background="@drawable/fully_round_button"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>