<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@color/background"
    tools:ignore="MissingClass">

    <Button
        android:id="@+id/payment_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:drawableLeft="@drawable/ic_baseline_monetization_on_24"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:textColor="@color/white"
        android:text="@string/payment_details"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="125dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/my_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/my_cart"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
        app:layout_constraintTop_toBottomOf="@+id/payment_details"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/notifications"
        android:drawableLeft="@drawable/ic_round_notifications_24"
        app:layout_constraintTop_toBottomOf="@+id/my_cart"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:textStyle="bold"
        android:text="@string/about_us"
        android:drawableLeft="@drawable/exclamation"
        app:layout_constraintTop_toBottomOf="@+id/notification"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>