<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@color/background"
    tools:ignore="MissingClass">

        <LinearLayout
            android:id="@+id/MensFashion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@raw/mens_fashion"
                    android:contentDescription="@string/mensFashion" />
                <Button
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_family"
                    android:text="@string/mens_fashion"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/womenFashion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/MensFashion">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@raw/women_fashion"
                    android:contentDescription="@string/women_fashion" />
                <Button
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_family"
                    android:text="@string/women_fashion" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/babyFashion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/womenFashion">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@raw/baby_fashion"
                    android:contentDescription="@string/baby_fashion" />
                <Button
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_family"
                    android:text="@string/baby_fashion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/babyFashion">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@raw/accessories"
                    android:contentDescription="@string/accessories" />
                <Button
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_family"
                    android:text="@string/accessories" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>